--- a/index.html
+++ b/index.html
@@ -1,51 +1,115 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Registration Form</title>
+    <meta charset="UTF-8">
+    <title>Student Registration Form</title>
     <style>
-        body { font-family: Arial, sans-serif; padding: 20px; }
-        #successMessage {
-            display: none;
+        body {
+            background-color: #e9f1fa;
+            font-family: Arial, sans-serif;
+            margin: 0;
             padding: 20px;
-            background-color: #d4edda;
-            color: #155724;
-            border: 1px solid #c3e6cb;
-            margin-top: 20px;
+        }
+        .container {
+            background: #ffffff;
+            max-width: 700px;
+            margin: auto;
+            padding: 25px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            border-top: 5px solid #0056b3;
+        }
+        h2 {
+            text-align: center;
+            color: #003d80;
+        }
+        label {
+            font-weight: bold;
+            color: #003366;
+        }
+        input, select, textarea {
+            width: 100%;
+            padding: 10px;
+            margin: 8px 0 20px 0;
+            border: 1px solid #a9c1dd;
             border-radius: 5px;
+            box-sizing: border-box;
+        }
+        textarea {
+            height: 80px;
+        }
+        .btn {
+            background-color: #0056b3;
+            color: white;
+            padding: 12px 20px;
+            width: 100%;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 16px;
+        }
+        .btn:hover {
+            background-color: #003d80;
         }
     </style>
 </head>
 <body>
 
-    <h2>Simple Registration Form</h2>
+<div class="container">
+    <h2>Student Registration Form</h2>
 
-    <div id="formContainer">
-        <form onsubmit="showSuccess(event)">
-            <label>Name:</label><br>
-            <input type="text" required><br><br>
+    <form>
+        <label>Roll Number</label>
+        <input type="text" required>
 
-            <label>Email:</label><br>
-            <input type="email" required><br><br>
+        <label>Student Name</label>
+        <input type="text" required>
 
-            <label>Password:</label><br>
-            <input type="password" required><br><br>
+        <label>Father's Name</label>
+        <input type="text" required>
 
-            <button type="submit">Register</button>
-        </form>
-    </div>
+        <label>Date of Birth</label>
+        <input type="date" required>
 
-    <div id="successMessage">
-        <h3>Registration Successful!</h3>
-        <p>You have been successfully registered.</p>
-    </div>
+        <label>Mobile Number</label>
+        <input type="tel" maxlength="10" required>
 
-    <script>
-        function showSuccess(event) {
-            event.preventDefault(); 
-            document.getElementById("formContainer").style.display = "none";
-            document.getElementById("successMessage").style.display = "block";
-        }
-    </script>
+        <label>Email ID</label>
+        <input type="email" required>
+
+        <label>Password</label>
+        <input type="password" required>
+
+        <label>Gender</label>
+        <select required>
+            <option value="">-- Select Gender --</option>
+            <option>Male</option>
+            <option>Female</option>
+            <option>Other</option>
+        </select>
+
+        <label>Department</label>
+        <select required>
+            <option value="">-- Select Department --</option>
+            <option>Computer Science</option>
+            <option>Electronics</option>
+            <option>Mechanical</option>
+            <option>Civil</option>
+            <option>Electrical</option>
+            <option>Information Technology</option>
+        </select>
+
+        <label>Student Photo</label>
+        <input type="file" accept="image/*" required>
+
+        <label>Address</label>
+        <textarea required></textarea>
+
+        <button type="submit" class="btn">Register</button>
+    </form>
+</div>
 
 </body>
 </html>
+
+
