--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             background-color: #003d80;
         }
 
-        /* Success Page Styles */
+        /* Success Page */
         #successBox {
             display: none;
             text-align: center;
@@ -64,6 +64,7 @@
             border-radius: 10px;
             border: 3px solid #003d80;
             margin-top: 10px;
+            object-fit: cover;
         }
         .info-box {
             font-size: 18px;
@@ -77,6 +78,7 @@
 </head>
 <body>
 
+<!-- REGISTRATION FORM -->
 <div class="container" id="formContainer">
     <h2>Student Registration Form</h2>
 
@@ -110,7 +112,7 @@
             <option>Other</option>
         </select>
 
-        <label>Department</label>
+        <label>Department / Branch</label>
         <select id="branch" required>
             <option value="">-- Select Department --</option>
             <option>Computer Science</option>
@@ -149,25 +151,27 @@
     function showSuccess(event) {
         event.preventDefault();
 
-        // Get form values
+        // Get values
         const name = document.getElementById("studentName").value;
         const usn = document.getElementById("usn").value;
         const branch = document.getElementById("branch").value;
 
-        // Set values in success box
+        // Show text details
         document.getElementById("displayName").innerText = name;
         document.getElementById("displayUSN").innerText = usn;
         document.getElementById("displayBranch").innerText = branch;
 
-        // Load uploaded image
+        // Handle the uploaded photo
         const file = document.getElementById("photo").files[0];
         const reader = new FileReader();
+
         reader.onload = function(e) {
             document.getElementById("previewImage").src = e.target.result;
-        }
+        };
+
         reader.readAsDataURL(file);
 
-        // Hide form and show success page
+        // Hide form and show success message
         document.getElementById("formContainer").style.display = "none";
         document.getElementById("successBox").style.display = "block";
     }
@@ -175,6 +179,8 @@
 
 </body>
 </html>
+
+
 
 
 
