--- a/index.html
+++ b/index.html
@@ -52,19 +52,27 @@
             background-color: #003d80;
         }
 
-        /* Success Page */
+        /* SUCCESS PAGE */
         #successBox {
             display: none;
             text-align: center;
             color: #003d80;
         }
-        #successBox img {
+        #previewImage {
             width: 150px;
             height: 150px;
             border-radius: 10px;
             border: 3px solid #003d80;
             margin-top: 10px;
-            object-fit: cover;
+            display: none;
+        }
+        #pdfViewer {
+            width: 100%;
+            height: 400px;
+            border: 2px solid #003d80;
+            border-radius: 8px;
+            display: none;
+            margin-top: 15px;
         }
         .info-box {
             font-size: 18px;
@@ -78,7 +86,6 @@
 </head>
 <body>
 
-<!-- REGISTRATION FORM -->
 <div class="container" id="formContainer">
     <h2>Student Registration Form</h2>
 
@@ -95,90 +102,7 @@
         <label>Date of Birth</label>
         <input type="date" required>
 
-        <label>Mobile Number</label>
-        <input type="tel" maxlength="10" required>
 
-        <label>Email ID</label>
-        <input type="email" required>
-
-        <label>Password</label>
-        <input type="password" required>
-
-        <label>Gender</label>
-        <select required>
-            <option value="">-- Select Gender --</option>
-            <option>Male</option>
-            <option>Female</option>
-            <option>Other</option>
-        </select>
-
-        <label>Department / Branch</label>
-        <select id="branch" required>
-            <option value="">-- Select Department --</option>
-            <option>Computer Science</option>
-            <option>Electronics</option>
-            <option>Mechanical</option>
-            <option>Civil</option>
-            <option>Electrical</option>
-            <option>Information Technology</option>
-        </select>
-
-        <label>Student Photo</label>
-        <input type="file" accept="image/*" id="photo" required>
-
-        <label>Address</label>
-        <textarea required></textarea>
-
-        <button type="submit" class="btn">Register</button>
-    </form>
-</div>
-
-<!-- SUCCESS PAGE -->
-<div class="container" id="successBox">
-    <h2>Registration Successful!</h2>
-    <p>Your details have been successfully submitted.</p>
-
-    <img id="previewImage" alt="Student Photo">
-
-    <div class="info-box">
-        <p><strong>Student Name:</strong> <span id="displayName"></span></p>
-        <p><strong>USN / Roll Number:</strong> <span id="displayUSN"></span></p>
-        <p><strong>Branch:</strong> <span id="displayBranch"></span></p>
-    </div>
-</div>
-
-<script>
-    function showSuccess(event) {
-        event.preventDefault();
-
-        // Get values
-        const name = document.getElementById("studentName").value;
-        const usn = document.getElementById("usn").value;
-        const branch = document.getElementById("branch").value;
-
-        // Show text details
-        document.getElementById("displayName").innerText = name;
-        document.getElementById("displayUSN").innerText = usn;
-        document.getElementById("displayBranch").innerText = branch;
-
-        // Handle the uploaded photo
-        const file = document.getElementById("photo").files[0];
-        const reader = new FileReader();
-
-        reader.onload = function(e) {
-            document.getElementById("previewImage").src = e.target.result;
-        };
-
-        reader.readAsDataURL(file);
-
-        // Hide form and show success message
-        document.getElementById("formContainer").style.display = "none";
-        document.getElementById("successBox").style.display = "block";
-    }
-</script>
-
-</body>
-</html>
 
 
 
